--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -10,9 +10,8 @@ on:
     branches: [ "main" ]
 
 jobs:
+  
   ci:
-
-  build:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
@@ -26,7 +25,7 @@ jobs:
       run: docker-compose up -d postgres
 
     - name: lint
-      run: 
+      run: docker run --rm -itv $(pwd):/app -w /app golangci/golangci-lint golangci-lint run controllers/ database/ models/ routes/
 
     - name: Test
       run: go test main_test.go
