--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,6 +1,3 @@
-# This workflow will build a golang project
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-go
-
 name: Integração Contínua
 
 on:
@@ -32,4 +29,12 @@ jobs:
 
     - name: Test
       run: DB_HOST=${{ secrets.DB_HOST }} DB_PORT=${{ secrets.DB_PORT }} DB_USER=${{ secrets.DB_USER }} DB_PASSWORD=${{ secrets.DB_PASSWORD }} DB_NAME=${{ secrets.DB_NAME }}
-      
+
+    - name: Build
+      run: go build main.go
+
+    - name: Projeto compilado
+      uses: actions/upload-artifact@v4 
+      with:
+        name: compilado_projeto
+        path: ./main
